tipografia y seccion agregada

--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
 
 
     <section class="presentacion">
+
+
+        <h2 class="titulo_presentacion">PRESENTACIÓN</h2>
+
+        <div class="contenedor_texto">
+            
+            <p>Nocturnario es un proyecto de rock alternativo con influencias
+            de post punk y la nueva ola de indie emergente. Sobre el amor, la ansiedad y la 
+            excesiva romantización de cualquier suceso que pueda ocurrirle a un joven en
+            la ciudad de Medellín.
+        </p></div>
         
     </section>
 
