--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nocturnario</title>
     <link rel="stylesheet" href="./styles.css">
+
 </head>
 
 <body>
@@ -58,7 +59,7 @@
     </section>
 
 
-
+<script src="./script.js"></script>
 </body>
 
 </html>
