se agrego la direccion a una seccion de la landing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="menu">
         <div class="contenedor">
             <ul class="elementos_menu">
-                <li class="navbot"><a href="#" class="link">Presentación</a></li>
+                <li class="navbot"><a href=" #presentacion " class="link">Presentación</a></li>
                 <li  class="navbot"><a href="#" class="link">Integrantes</a></li>
                 <li  class="navbot"><a href="#" class="link">Música</a></li>
                 <li  class="navbot"><a href="#" class="link">Eventos</a></li>
@@ -43,7 +43,7 @@
     <!--Fin del Header-->
 
 
-    <section class="presentacion">
+    <section class="presentacion" id="presentacion">
 
 
         <h2 class="titulo_presentacion">PRESENTACIÓN</h2>
