se agrego el fav icon y footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nocturnario</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="icon" type="image/x-icon" href="./assets/img/fav_icon.png">
 
 </head>
 
@@ -14,10 +15,10 @@
         <div class="contenedor">
             <ul class="elementos_menu">
                 <li class="navbot"><a href=" #presentacion " class="link">Presentación</a></li>
-                <li  class="navbot"><a href="#" class="link">Integrantes</a></li>
-                <li  class="navbot"><a href="#" class="link">Música</a></li>
-                <li  class="navbot"><a href="#" class="link">Eventos</a></li>
-                <li  class="navbot"><a href="#" class="link">Galería</a></li>
+                <li class="navbot"><a href="#" class="link">Integrantes</a></li>
+                <li class="navbot"><a href="#" class="link">Música</a></li>
+                <li class="navbot"><a href="#" class="link">Eventos</a></li>
+                <li class="navbot"><a href="#" class="link">Galería</a></li>
 
             </ul>
         </div>
@@ -34,8 +35,10 @@
         <div class="parent">
             <div class="logo"> <img src="./assets/img/logo_noct.png" alt=""></div>
             <div class="noct2"> Noc<br>tur///<br>nario</div>
-            <div class="texto"><p>Indie/Alternative</p></div>
+            <div class="texto">
+                <p>Indie/Alternative</p>
             </div>
+        </div>
 
     </header>
 
@@ -49,17 +52,37 @@
         <h2 class="titulo_presentacion">PRESENTACIÓN</h2>
 
         <div class="contenedor_texto">
-            
+
             <p>Nocturnario es un proyecto de rock alternativo con influencias
-            de post punk y la nueva ola de indie emergente. Sobre el amor, la ansiedad y la 
-            excesiva romantización de cualquier suceso que pueda ocurrirle a un joven en
-            la ciudad de Medellín.
-        </p></div>
-        
+                de post punk y la nueva ola de indie emergente. Sobre el amor, la ansiedad y la
+                excesiva romantización de cualquier suceso que pueda ocurrirle a un joven en
+                la ciudad de Medellín.
+            </p>
+        </div>
+
     </section>
 
 
-<script src="./script.js"></script>
+
+    <footer> Nocturnario 2024
+
+
+        <span>Esta pagina hecha para la agrupación Nocturnario hace parte del proyecto realizado para el diplomado WEB
+            FULLSTACK de UPB</span>
+
+        <div class="contenedor_footer">
+            <ul>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Youtube</a></li>
+                <li><a href="#">Spotify</a></li>
+
+            </ul>
+
+        </div>
+    </footer>
+
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
