se modifico el texto de las tarjetas

--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
             <div class="tarjeta">
                 <img src="./assets/img/sebastian.jpg"alt="sebastian">
     
-                <h3>Sebastián</h3>
+                <h3>Sebastián Botero</h3>
                 <span>Guitarra lider</span>
             </div>
 
             <div class="tarjeta">
                 <img src="./assets/img/daniel.jpg" alt="sebastian">
-                <h3>Daniel</h3>
+                <h3>Daniel Rivera</h3>
                 <span>Bajo y voz</span>
             </div>
 
             <div class="tarjeta">
                 <img src="./assets/img/richie.jpg" alt="sebastian">
-                <h3>Richie</h3>
+                <h3>Richie Morán</h3>
                 <span>Batería</span>
             </div>
 
