cambios de tipografia

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="contenedor">
             <ul class="elementos_menu">
                 <li class="navbot"><a href=" #presentacion " class="link">Presentación</a></li>
-                <li class="navbot"><a href="#" class="link">Integrantes</a></li>
+                <li class="navbot"><a href="#integrantes" class="link">Integrantes</a></li>
                 <li class="navbot"><a href="#" class="link">Música</a></li>
                 <li class="navbot"><a href="#" class="link">Eventos</a></li>
                 <li class="navbot"><a href="#" class="link">Galería</a></li>
@@ -70,7 +70,7 @@
 
     <!--Inicio de seccion integrantes-->
 
-    <section class="integrantes">
+    <section class="integrantes" id="integrantes">
         <h2>INTEGRANTES</h2>
 
         <div class="contenedor_tarjetas">
@@ -97,10 +97,7 @@
 
 
         </div>
-
-
-
-
+        
     
     </section>
 
