se agrego la seccion de musica

--- a/index.html
+++ b/index.html
@@ -106,7 +106,40 @@
 
     <!--Inicio de seccion musica-->
     
-    <section class="musica"></section>
+    <section class="musica">
+        <h3>MÚSICA</h3>
+
+        <div class="contenedor_musica">
+
+
+            <div class="contenedor_portada">
+
+            <img src="./assets/img/Eclipse.jpg" alt="eclipse">
+
+            <span>ECLIPSE</span>
+
+        </div>
+
+            <div class="texto_eclipse">
+                <p>Escucha nuestro lanzamiento más reciente "Eclipse" ya disponible en todas las plataformas.</p>
+               
+               <a href="https://youtu.be/EVI-RYMHNBw?si=bxyPaflMzngiqr5j" target="_blank"> <button class="boton_eclipse" type="button">ESCUCHANOS</button></a>
+            </div>
+
+        </div>
+
+
+
+    </section>
+
+    <!--Fin de seccion musica-->
+
+    <!--Inicio de seccion Eventos-->
+    <section class="eventos">
+        <span>NO HAY EVENTOS PRÓXIMOS</span>
+    </section>
+
+
 
 
 
