--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="elementos_menu">
                 <li class="navbot"><a href=" #presentacion " class="link">Presentación</a></li>
                 <li class="navbot"><a href="#integrantes" class="link">Integrantes</a></li>
-                <li class="navbot"><a href="#" class="link">Música</a></li>
+                <li class="navbot"><a href="#musica" class="link">Música</a></li>
                 <li class="navbot"><a href="#" class="link">Eventos</a></li>
                 <li class="navbot"><a href="#" class="link">Galería</a></li>
 
@@ -106,15 +106,30 @@
 
     <!--Inicio de seccion musica-->
     
-    <section class="musica">
+    <section class="musica" id="musica">
         <h3>MÚSICA</h3>
 
         <div class="contenedor_musica">
 
 
-            <div class="contenedor_portada">
-
+        <div class="contenedor_portada">
+            <div class="img_hover">
             <img src="./assets/img/Eclipse.jpg" alt="eclipse">
+
+               <div class="contenido_hover">
+
+                    <ul>
+                     <li>Atemporal</li>
+                     <li>Vapor</li>
+                     <li>Ámbar</li>
+                     <li>La tormenta Roja</li>
+                     <li>Lo que quería sentir</li>
+                     <li>Misterio</li>
+                   </ul>
+
+                 </div>
+
+                </div>
 
             <span>ECLIPSE</span>
 
@@ -123,7 +138,7 @@
             <div class="texto_eclipse">
                 <p>Escucha nuestro lanzamiento más reciente "Eclipse" ya disponible en todas las plataformas.</p>
                
-               <a href="https://youtu.be/EVI-RYMHNBw?si=bxyPaflMzngiqr5j" target="_blank"> <button class="boton_eclipse" type="button">ESCUCHANOS</button></a>
+               <a href="https://youtu.be/EVI-RYMHNBw?si=bxyPaflMzngiqr5j" target="_blank"> <button class="boton_eclipse" type="button">ESCÚCHANOS</button></a>
             </div>
 
         </div>
