cambios en la seccion musica y se agrego la seccion eventos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li class="navbot"><a href=" #presentacion " class="link">Presentación</a></li>
                 <li class="navbot"><a href="#integrantes" class="link">Integrantes</a></li>
                 <li class="navbot"><a href="#musica" class="link">Música</a></li>
-                <li class="navbot"><a href="#" class="link">Eventos</a></li>
+                <li class="navbot"><a href="#eventos" class="link">Eventos</a></li>
                 <li class="navbot"><a href="#" class="link">Galería</a></li>
 
             </ul>
@@ -131,9 +131,9 @@
 
                 </div>
 
-            <span>ECLIPSE</span>
-
         </div>
+
+        
 
             <div class="texto_eclipse">
                 <p>Escucha nuestro lanzamiento más reciente "Eclipse" ya disponible en todas las plataformas.</p>
@@ -142,16 +142,20 @@
             </div>
 
         </div>
-
-
+    
 
     </section>
 
     <!--Fin de seccion musica-->
 
     <!--Inicio de seccion Eventos-->
-    <section class="eventos">
-        <span>NO HAY EVENTOS PRÓXIMOS</span>
+
+
+    <section class="eventos" id="eventos">
+
+        <span>NO HAY EVENTOS PRÓXIMOS :c </span>
+
+
     </section>
 
 
