se agrego seccion galeria

--- a/index.html
+++ b/index.html
@@ -158,6 +158,19 @@
 
     </section>
 
+    <!--fin de seccion Eventos-->
+
+<hr>
+    <!--inicio de seccion galeria-->
+
+
+    <section class="galeria">
+        <span>AQUI IRIA LA GALERIA</span>
+
+
+    </section>
+
+     <!--fin de seccion galeria-->
 
 
 
