se agregaron eventos en la seccion correspondiente y se arreglaron ciertos fallos

--- a/index.html
+++ b/index.html
@@ -153,7 +153,35 @@
 
     <section class="eventos" id="eventos">
 
-        <span>NO HAY EVENTOS PRÓXIMOS :c </span>
+        <h3>EVENTOS</h3>
+
+
+
+
+        <div class="contenedor_ev">
+            
+            <div class="texto_ev">
+                <span id="fecha">Medellín, 28 de Septiembre 2023</span>
+                <br>
+                <span id="lugar">Teatro Carantoña</span>
+            </div>
+
+           <div class="img_ev"><img src="./assets/img/avenidas.jpeg" alt="avenidas"></div>
+
+        </div>
+
+
+        <div class="contenedor_ev">
+            
+            <div class="texto_ev">
+                <span id="fecha">Bello, 07 de Marzo 8 PM</span>
+                <br>
+                <span id="lugar">King's Rock Pub</span>
+            </div>
+
+           <div class="img_ev"><img src="./assets/img/mareas.png" alt="mareas"></div>
+
+        </div>
 
 
     </section>
@@ -165,7 +193,6 @@
 
 
     <section class="galeria">
-        <span>AQUI IRIA LA GALERIA</span>
 
 
     </section>
