--- a/index.html
+++ b/index.html
@@ -174,6 +174,12 @@
                <a href="https://youtu.be/EVI-RYMHNBw?si=bxyPaflMzngiqr5j" target="_blank"> <button class="boton_eclipse" type="button">ESCÚCHANOS</button></a>
             </div>
 
+            <div class="texto_eclipse_media">
+                <p>Escucha nuestro lanzamiento más reciente "Eclipse" ya disponible en todas las plataformas.</p>
+               
+               <a href="https://youtu.be/EVI-RYMHNBw?si=bxyPaflMzngiqr5j" target="_blank"> <button class="boton_eclipse_media" type="button">ESCÚCHANOS</button></a>
+            </div>
+
         </div>
 
 
