se actualizaron datos y eventos de la pagina de nocturnario

--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
             </div>
 
             <div class="tarjeta">
+                <img src="./assets/img/jero.jpg" alt="jero">
+                <h3>Jerónimo Aristizabal</h3>
+                <span>Guitarra Rítmica</span>
+            </div>
+
+            <div class="tarjeta">
                 <img src="./assets/img/daniel.jpg" alt="sebastian">
                 <h3>Daniel Rivera</h3>
                 <span>Bajo y voz</span>
@@ -110,9 +116,19 @@
                 <span>Guitarra lider</span>
             </div>
 
+
             <div class="tarjeta_media">
                 <div class="img_tarjeta">
-                    <img src="./assets/img/daniel.jpg" alt="sebastian">
+                    <img src="./assets/img/jero.jpg" alt="jero">
+                </div>
+                <h3 id="jero">Jerónimo Aristizabal</h3>
+                <span>Guitarra Rítmica</span>
+            </div>
+
+
+            <div class="tarjeta_media">
+                <div class="img_tarjeta">
+                    <img src="./assets/img/daniel.jpg" alt="daniel">
                 </div>
                 <h3 id="daniel">Daniel Rivera</h3>
                 <span>Bajo y voz</span>
@@ -120,11 +136,13 @@
 
             <div class="tarjeta_media">
                 <div class="img_tarjeta">
-                    <img src="./assets/img/richie.jpg" alt="sebastian">
+                    <img src="./assets/img/richie.jpg" alt="richie">
                 </div>
                 <h3 id="richie">Richie Morán</h3>
                 <span>Batería</span>
             </div>
+
+            
 
 
 
@@ -217,7 +235,7 @@
         <div class="contenedor_ev">
 
             <div class="texto_ev">
-                <span id="fecha">Medellín, 28 de Septiembre 2023</span>
+                <span id="fecha">Medellín, 28 de Septiembre - 2023</span>
                 <br>
                 <span id="lugar">Teatro Carantoña</span>
             </div>
@@ -230,12 +248,48 @@
         <div class="contenedor_ev">
 
             <div class="texto_ev">
-                <span id="fecha">Bello, 07 de Marzo 8 PM</span>
+                <span id="fecha">Bello, 07 de Marzo 8 PM - 2024</span>
                 <br>
                 <span id="lugar">King's Rock Pub</span>
             </div>
 
             <div class="img_ev"><img src="./assets/img/mareas.png" alt="mareas"></div>
+
+        </div>
+
+        <div class="contenedor_ev">
+
+            <div class="texto_ev">
+                <span id="fecha">Medellín, 08 de Junio 8 PM - 2024</span>
+                <br>
+                <span id="lugar">Club Líbido</span>
+            </div>
+
+            <div class="img_ev"><img src="./assets/img/culto.jpg" alt="culto"></div>
+
+        </div>
+
+        <div class="contenedor_ev">
+
+            <div class="texto_ev">
+                <span id="fecha">Medellín, 02 de Agosto 7:30 PM - 2024</span>
+                <br>
+                <span id="lugar">Teatro Imagineros</span>
+            </div>
+
+            <div class="img_ev"><img src="./assets/img/imagineros.jpg" alt="imagineros"></div>
+
+        </div>
+
+        <div class="contenedor_ev">
+
+            <div class="texto_ev">
+                <span id="fecha">Medellín, 14 de Noviembre 6:30 PM - 2024</span>
+                <br>
+                <span id="lugar">Casa Estudio Pequeños Artistas</span>
+            </div>
+
+            <div class="img_ev"><img src="./assets/img/petalos.jpg" alt="petalos"></div>
 
         </div>
 
