--- a/index.html
+++ b/index.html
@@ -303,6 +303,42 @@
 
 
     <section class="galeria">
+     <div class="container">
+        
+        <div class="box">
+            <img src="./assets/img/uno.jpg" alt="">
+        </div>
+
+        <div class="box">
+            <img src="./assets/img/dos.jpg" alt="">
+        </div>
+
+        <div class="box">
+            <img src="./assets/img/tres.jpg" alt="">
+        </div>
+
+        <div class="box">
+            <img src="./assets/img/cuatro.jpg" alt="">
+        </div>
+
+        <div class="box">
+            <img src="./assets/img/cinco.jpg" alt="">
+        </div>
+
+        <div class="box">
+            <img src="" alt="">
+        </div>
+
+        <div class="box">
+            <img src="" alt="">
+        </div>
+
+        <div class="box">
+            <img src="" alt="">
+        </div>
+
+     </div>
+       
 
 
     </section>
