se añadió la función del botón de galería en el menú

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li class="navbot"><a href="#integrantes" class="link">Integrantes</a></li>
                 <li class="navbot"><a href="#musica" class="link">Música</a></li>
                 <li class="navbot"><a href="#eventos" class="link">Eventos</a></li>
-                <li class="navbot"><a href="#" class="link">Galería</a></li>
+                <li class="navbot"><a href="#galeria" class="link">Galería</a></li>
 
             </ul>
         </div>
@@ -302,7 +302,7 @@
     <!--inicio de seccion galeria-->
 
 
-    <section class="galeria">
+    <section class="galeria" id="galeria">
      <div class="container">
         
         <div class="box">
