se actualizó el registro fotográfico de la página

--- a/index.html
+++ b/index.html
@@ -326,15 +326,15 @@
         </div>
 
         <div class="box">
-            <img src="" alt="">
+            <img src="./assets/img/seis.jpg" alt="">
         </div>
 
         <div class="box">
-            <img src="" alt="">
+            <img src="./assets/img/siete.JPG" alt="">
         </div>
 
         <div class="box">
-            <img src="" alt="">
+            <img src="./assets/img/ocho.JPG" alt="">
         </div>
 
      </div>
